--- a/css/base.css
+++ b/css/base.css
@@ -50,7 +50,7 @@ body {
     -webkit-font-smoothing: antialiased;
     background-color: #fff;
     font: 12px/1.5 Microsoft YaHei, Heiti SC, tahoma, arial, Hiragino Sans GB, "\5B8B\4F53", sans-serif;
-    color: #666
+    color: #272424;
 }
 
 .hide,
@@ -69,3 +69,15 @@ body {
 .clearfix {
     *zoom: 1
 }
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?1khxcn');
+    src:  url('../fonts/icomoon.eot?1khxcn#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?1khxcn') format('truetype'),
+      url('../fonts/icomoon.woff?1khxcn') format('woff'),
+      url('../fonts/icomoon.svg?1khxcn#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
