--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,3 @@
-@font-face {
-    font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?1khxcn');
-    src:  url('../fonts/icomoon.eot?1khxcn#iefix') format('embedded-opentype'),
-      url('../fonts/icomoon.ttf?1khxcn') format('truetype'),
-      url('../fonts/icomoon.woff?1khxcn') format('woff'),
-      url('../fonts/icomoon.svg?1khxcn#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
-
 .bgimg {
     position: absolute;
     top: 0;
@@ -58,7 +46,7 @@
 .login .box .body div {
     position: relative;
 }
-.login .box .body div i{
+.login .box .body i{
     position: absolute;
     top: 15px;
     right: 40px;
@@ -77,24 +65,49 @@
 .login .box .body input{
     display: block;
     width: 282px;
-    height: 53px;
-    margin: 52px auto;
-    font-size: 14px;
+    height: 53px;   
+    margin: 45px auto;
+    font-size: 18px;
+    line-height: 53px;
     border-bottom: 2px solid #38a1ff;
 }
-
-.login .box .body input[type="submit"] {
+.login .box .body .code{
+    position: absolute;  
+    width: 100%;
+    bottom: 170px;
+}
+.success::after,
+.failure::after{
+    position: absolute;
+    left: 15px;
+    top: 25px;   
+    font-family: icomoon;
+    font-size: 14px;
+}
+.success::after{
+    color: #1a8cfe;
+    content: "\ea10";
+}
+.failure::after{
+    color: #bd2d30;
+    content: "\ea0f";
+}
+.login .box .body #code{
+    display: inline;
+    width: 160px;
+    margin: 0;
+    margin-left: 39px;
+}
+.login .box .body #submit {
     width: 228px;
     height: 80px;
     background: #1a8cfe;
     border-radius: 40px;
     font-size: 24px;
-    text-align: center;
     color: #ffffff;
-    line-height: 30px;
-    margin-top: 100px;
+    margin-top: 140px;
 }
-.login .box .body input[type="submit"]:hover {
+.login .box .body #submit:hover {
     background: #2064b7;
 }
    
