--- a/css/base.css
+++ b/css/base.css
@@ -72,11 +72,11 @@ body {
 
 @font-face {
     font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?1khxcn');
-    src:  url('../fonts/icomoon.eot?1khxcn#iefix') format('embedded-opentype'),
-      url('../fonts/icomoon.ttf?1khxcn') format('truetype'),
-      url('../fonts/icomoon.woff?1khxcn') format('woff'),
-      url('../fonts/icomoon.svg?1khxcn#icomoon') format('svg');
+    src:  url('../fonts/icomoon.eot?f3s1lr');
+    src:  url('../fonts/icomoon.eot?f3s1lr#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?f3s1lr') format('truetype'),
+      url('../fonts/icomoon.woff?f3s1lr') format('woff'),
+      url('../fonts/icomoon.svg?f3s1lr#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
