--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?f3s1lr');
+    src:  url('../fonts/icomoon.eot?f3s1lr#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?f3s1lr') format('truetype'),
+      url('../fonts/icomoon.woff?f3s1lr') format('woff'),
+      url('../fonts/icomoon.svg?f3s1lr#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+
 /* 把我们所有标签的内外边距清零 */
 * {
     margin: 0;
@@ -9,6 +21,10 @@
 em,
 i {
     font-style: normal
+    
+}
+i{
+    font-family: icomoon;
 }
 /* 去掉li 的小圆点 */
 li {
@@ -28,14 +44,16 @@ button {
 }
 
 a {
-    color: #666;
+    color: #fff;
     text-decoration: none
 }
 
-a:hover {
+/* a:hover {
     color: #c81623
+} */
+h4{
+    font-weight: 400;
 }
-
 button,
 input {
     /* "\5B8B\4F53" 就是宋体的意思 这样浏览器兼容性比较好 */
@@ -70,14 +88,3 @@ body {
     *zoom: 1
 }
 
-@font-face {
-    font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?f3s1lr');
-    src:  url('../fonts/icomoon.eot?f3s1lr#iefix') format('embedded-opentype'),
-      url('../fonts/icomoon.ttf?f3s1lr') format('truetype'),
-      url('../fonts/icomoon.woff?f3s1lr') format('woff'),
-      url('../fonts/icomoon.svg?f3s1lr#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
