--- a/css/common.css
+++ b/css/common.css
@@ -1,11 +1,11 @@
-
-.header{
+.header {
     position: relative;
     height: 69px;
     background: #ffffff;
-    box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.15); 
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15);
 }
-.header .title{
+
+.header .title {
     position: absolute;
     width: 299px;
     height: 100%;
@@ -15,10 +15,12 @@
     text-align: center;
     line-height: 69px;
 }
-.header .title a{
+
+.header .title a {
     color: #272727;
 }
-.header .name{
+
+.header .name {
     position: absolute;
     float: left;
     width: 245px;
@@ -29,7 +31,8 @@
     color: #27274a;
     line-height: 69px;
 }
-.header .message{
+
+.header .message {
     position: absolute;
     float: right;
     right: 20px;
@@ -37,7 +40,8 @@
     line-height: 69px;
     cursor: pointer;
 }
-.sidevar{
+
+.sidevar {
     /* position: relative; */
     position: absolute;
     top: 69px;
@@ -48,7 +52,8 @@
     background: #27274a;
     transition: all .4s;
 }
-.sidevar .turn{
+
+.sidevar .turn {
     width: 160px;
     height: 40px;
     padding: 5px 16px;
@@ -56,11 +61,13 @@
     font-size: 20px;
     line-height: 30px;
 }
-.sidevar .turn i{
+
+.sidevar .turn>i {
     float: right;
     cursor: pointer;
 }
-.sidevar .tables>div{
+
+.sidevar .tables>div {
     position: relative;
     width: 160px;
     height: 40px;
@@ -71,44 +78,89 @@
     transition: all .4s;
 }
 
-.sidevar .inner{  
+.sidevar .tables .inner {
     background-color: #1a8cfe;
-    border-radius: 6px; 
+    border-radius: 6px;
 }
-.sidevar .inner a{
+
+.sidevar .tables .inner>a {
     height: 30px;
     position: relative;
     display: block;
 }
-.sidevar .inner i{
+
+.sidevar .tables .inner>a i {
     position: absolute;
     left: 12px;
 }
-.sidevar .inner h4{
+
+.sidevar .tables .inner>a h4 {
     position: absolute;
     right: 30px;
     width: 80px;
     display: inline;
     text-align: center;
 }
-.sidevar .tables .open:hover .sideopen{
-    width: 830px;
-    height: 395px;
-    }
-.sidevar .tables .open a::after{
+
+.sidevar .tables .open:hover .sideopen {  
+    width: 832px;
+    height: 345px;
+}
+.sidevar .tables .open:hover .sideopen .sideopen-inner{
+    display: block;
+}
+.sidevar .tables .open>a::after {
     position: absolute;
     right: 12px;
     content: "";
     font-family: icomoon;
 }
-.sidevar .sideopen{
+
+.sidevar .sideopen {
     position: absolute;
     top: 0;
     left: 160px;
-    width: 0px;
-    height: 0px;
+    width: 0;
+    height: 345px;
     background: #fff;
+    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15);
+    transition: all .3s;
+}
+.sidevar .sideopen .sideopen-inner{
+    display: none;
+    width: 832px;
+    height: 345px;
     border-left: 2px solid #777777;
-    box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.15); 
-    transition: all .4s;
+    padding: 10px;
+    transition: all .3s;
+}
+.sidevar .sideopen dl {
+    float: left;
+    /* position: absolute; */
+    width: 158px;
+    height: 172px;
+}
+
+.sidevar .sideopen dt {
+    height: 42px;
+    text-align: center;
+    border-bottom: 2px solid #f1f3f8;
+}
+
+.sidevar .sideopen dt h4 {
+    width: 120px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #27274a;
+    border-left: 4px solid #1a8cfe;
+}
+
+.sidevar .sideopen dd a {
+    display: block;
+    width: 141px;
+    height: 40px;
+    line-height: 40px;
+    color: #777777;
 }
