--- a/css/create-from.css
+++ b/css/create-from.css
@@ -1,5 +1,38 @@
 .contain .form{
+    float: left;
+    color: #4a4a4a;
     width: 500px;
     height: 150px;
+    padding: 20px 40px;
     background-color: #fff;
+    text-align: center;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+.contain .form:hover{
+    box-shadow:0px 3px 6px 0px rgba(0,0,0,0.15);
+}
+.contain .form .img{
+    float: left;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    line-height: 110px;
+    font-size: 40px;
+}
+.jpg{background: -webkit-linear-gradient(top left,#f98896,#f76478) ;}
+.doc{background: -webkit-linear-gradient(top left,#fba679,#fe8545) ;}
+.xls{background: -webkit-linear-gradient(top left,#bb90e4,#a16cd3) ;}
+
+.contain .form .img i{
+    background-image: -webkit-linear-gradient(left,#ffffff ,#fee2e6 50%,#fffcfc);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.contain .form .title{
+    font-size: 24px;
+}
+.contain .form .text{
+    margin-top: 30px;
 }
