--- a/css/fiiform.css
+++ b/css/fiiform.css
@@ -95,6 +95,7 @@
     font-size: 10px;
     width: 100%;
     padding: 5px;
+    margin: 30px 0;
     display: block;
     border: 1px solid #1a8cfe;
     resize: none;
