--- a/css/fiiform.css
+++ b/css/fiiform.css
@@ -54,8 +54,9 @@
 .mbody{
     position: absolute;
     top: 100px;
-    left: 220px;
-    right: 195px;
+    left: 120px;
+    right: 125px;
+    margin: 30px 0 60px 0;
     background-color: #fff;
 }
 .mbody .title{
