--- a/css/fiiform.css
+++ b/css/fiiform.css
@@ -54,14 +54,14 @@
 .mbody{
     position: absolute;
     top: 100px;
-    left: 120px;
-    right: 125px;
+    left: 60px;
+    right: 90px;
     margin: 30px 0 60px 0;
     background-color: #fff;
 }
 .mbody .title{
     padding: 0 10px;
-    font-size: 24px;
+    font-size: 32px;
     font-weight: 700;
     text-align: center;
     line-height: 60px;
@@ -74,15 +74,15 @@
 }
 .mbody .content .section{
     position: relative;
-    font: 20px/2 sans-serif;
+    font: 30px/2 sans-serif;
     text-indent: 2em;
     margin: 15px 0;
 }
 .submit{
     position: fixed;
     bottom: 20px;
-    right: 20px;
-    width: 155px;
+    right: 10px;
+    width: 70px;
     height: 34px;
     color: #fff;
     font-size: 16px;
@@ -90,10 +90,14 @@
     line-height: 34px;
     background-color:#1a8cfe;
     border-radius: 13px;
+    cursor: pointer;
+}
+.submit:hover{
+    background-color: #5fafff;
 }
 .textarea{
     text-indent: 0;
-    font-size: 10px;
+    font-size: 18px;
     width: 100%;
     padding: 5px;
     margin: 30px 0;
@@ -173,26 +177,30 @@
     cursor: pointer;
 }
 .form{
+    font-size: 24px;
     margin-bottom: 20px;
     position: relative;
 }
 fieldset{
     font-weight: 700;
-    font-size: 22px;
+    font-size: 24px;
     border:1px solid #1a8cfe;
 }
 fieldset label{
     padding: 0 5px;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 24px;
     text-align: center;
 }
 fieldset input[type='text']{
-    width: 30%;
+    margin: 0 0 10px 0;
+    font-size: 20px;
+    width: 35%;
     border: #1a8cfe 1px solid;
 }
 fieldset input[type='submit']{
     background-color: #fff;
+    font-size: 20px;
     color: #1a8cfe;
     cursor: pointer;
 }
