--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,9 @@
     left: 0;
     right: 0;
     overflow-x:auto;
-    /* float: left; */
     height: 280px;
     background-color: #fff;
     padding: 20px 35px;
-    /* margin-bottom: 30px; */
 }
 .contain .big .title{
     height: 46px;
@@ -28,12 +26,17 @@
 .contain .big .body{
     width: 1000px;
 }
-.contain .big .body a{
+.contain .big .body li{
+    position: relative;
     float: left;
     width: 160px;
     height: 60px;
     margin-top: 30px;
     margin-right: 20px;
+}
+.contain .big .body h4{
+    float: left;
+    padding-left: 10px;
     font-size: 20px;
     line-height: 60px;
     display: block;
@@ -41,11 +44,30 @@
     border-left: 3px solid #1a8cfe;
     overflow: hidden;
 	text-overflow: ellipsis;
-	white-space: nowrap;
+    white-space: nowrap;
+    cursor: pointer;
 }
-.contain .big .body a:hover{
-    color: #1a8cfe;
+.contain .big .body li:hover .body-ineer{
+    height: 120px;
 }
-.contain .big .body h4 {
-    margin-left: 10px;
+
+.contain .big .body .body-ineer{
+    z-index: 999;
+    position: absolute;
+    top: 60px;
+    width: 160px;
+    height: 0;
+    overflow: hidden;
+    transition: all .3s;   
+}
+.contain .big .body .body-ineer dl{
+    background-color: #f5f7fa;
+    padding: 0 15px;
+}
+.contain .big .body .body-ineer dd{
+    margin-bottom: 10px;
+    border-bottom: #dddddd solid 1px;
+}
+.contain .big .body .body-ineer dd a{
+    color: #777777;
 }
