--- a/css/main.css
+++ b/css/main.css
@@ -71,3 +71,6 @@
 .contain .big .body .body-ineer dd a{
     color: #777777;
 }
+.contain .big .body .body-ineer dd a:hover{
+    color: #1a8cfe;
+}
