--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@
     width: 160px;
     height: 0;
     overflow: hidden;
+    font-size: 13px;
     transition: all .3s;   
 }
 .contain .big .body .body-ineer dl{
